--- a/MeuPrimeiroSite-4/css/estilo.css
+++ b/MeuPrimeiroSite-4/css/estilo.css
@@ -2,6 +2,7 @@ body{
     background-size: contain;
     background-repeat: no-repeat;
     background-image: url("../img/background\ site22.png")
+
 }
 header{
     display: flexbox;
@@ -103,7 +104,7 @@ main{
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-    background-color: aliceblue;
+
 }
 section{
 
@@ -117,13 +118,13 @@ footer{
     display: flex;
     align-items: center;
     justify-content: space-between;
- 
+    background-color: black;
     padding: 10px 20px;
     position: fixed;
     top: 0;
     width: 100%;
     z-index: 1000;
-    box-sizing: border-box;
+    box-sizing: border-bx;
 }
 .rodape{
     padding: 2%;
@@ -138,6 +139,15 @@ p{
     font-size: 1.2em;
     text-align: justify;
     color: rgb(255, 255, 255);
+}
+
+.content{
+    background-color: rgba(0, 0, 0, 0.959);
+    padding: 20px;
+    border-radius: 40px;
+    position: relative;
+    top: 30px;
+
 }
 ul,li{
     line-height: 1.5;
@@ -174,9 +184,5 @@ table{
     height: auto;
   }
 
-#grad1 {
-
-    background-image: linear-gradient(to top, rgba(255,0,0,0), rgb(0, 0, 0));
-}
 
 
