--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,11 @@
 body{ 
-    background-size: contain;
-    background-repeat: no-repeat;
-}
+    background-size: cover;
+    background-attachment: fixed; /* Fixa a imagem de fundo */
+    background-repeat: no-repeat; /* Evita que a imagem se repita */
+    background-position: center; 
+    background-image: url(../img/4.jpg);
+    background-position-y: -50%;
+} 
 header{
     display: flexbox;
     justify-content: space-between;
@@ -104,20 +108,14 @@ main{
     margin-right: auto;
 
 }
-section{
 
-    opacity: 1;
-}
-footer{
-    
-    padding: 3%;
-}
+
 .cabecalho{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: black;
-    padding: 10px 20px;
+    background-color: rgb(0, 0, 0);
+    padding: 5px 30px;
     position: fixed;
     top: 0;
     width: 100%;
@@ -125,44 +123,62 @@ footer{
     box-sizing: border-box;
 }
 
-.imagem1{
-    width: 10000px;
-    border-radius: 30px;
-}
-
 
 .titulos{
     line-height: 3;
-    text-align: center;
     font-weight: bold;
+    color: rgb(255, 255, 255);
+    font-family: "Quicksand", sans-serif;
 }
-p{
-    line-height: 1.5;
-    font-size: 1.2em;
-    text-align: justify;
-    color: rgb(0, 0, 0);
-}
-
 .divgr{
-    background-color: rgb(228, 228, 228);
-   
-    border-radius: 40px;
+    background-color: rgb(5, 5, 5);
+    border-radius: 30px;
     position: relative;
-    top: 90px;
+    top: 700px;
+    right: 110px;
+    padding-left: 30px;
+    padding-right: 30px;
+    width: 1210px;
+}
 
+.img1 img{
+    border-radius: 30px;
+    width: 300px;
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    height: auto;
+    padding: 20px;
 }
-ul,li{
+.img7 img{
+    border-radius: 30px;
+    width: 900px;
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    height: auto;
+    padding: 20px;
+}
+
+.divgr p{
     line-height: 1.5;
-    font-size: 1.2em;
+    font-size: 1.1em;
+    text-align: justify;
+    color: rgb(255, 255, 255);
+    font-family: "Quicksand", sans-serif;
+    font-weight:400;
 }
-h1{
-    font-size: 2em;
-    color: rgb(0, 0, 0);
+
+.divgr h1{
+    font-size: 3em;
+    text-align: center;
 }
-h2{
+
+.divgr h2{
     font-size: 1.5em;
-    color: rgb(0, 0, 0);
+    text-align: calc(100);
 }
+
 table{
     margin-left: auto;
     margin-right: auto;
@@ -181,15 +197,14 @@ table{
   tr:nth-child(even) {
     background-color: rgb(97, 49, 209);
   }
-  img{
-    width: 240px;
-    height: auto;
-  }
+
 
 .rodape{
     padding: 2%;
     background-color: black;
     color: #ffffff;
+    position: relative;
+    bottom: 0px;
 }
 
 
