--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,16 +1,18 @@
 body{ 
     background-size: cover;
-    background-attachment: fixed; /* Fixa a imagem de fundo */
-    background-repeat: no-repeat; /* Evita que a imagem se repita */
+    background-attachment: fixed; 
+    background-repeat: no-repeat; 
     background-position: center; 
-    background-image: url(../img/4.jpg);
-    background-position-y: -50%;
+    background-image: url(../img/vm2\ \(2\).jpeg);
+    background-position-y: 50%;
 } 
 header{
     display: flexbox;
     justify-content: space-between;
     align-items: center;
-    padding: 15%;
+    padding: 3%;
+    font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
+    font-weight: bold;
 }
 nav ul {
     list-style: none;
@@ -26,10 +28,6 @@ nav ul li a {
     text-decoration: none;
     padding: 10px 15px;
     display: flex;
-    line-height: 3;
-    font-size: 1.5em;
-    font-weight: bold;
-    font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
 }
 .menu-icon {
     display: none;
@@ -83,9 +81,27 @@ nav ul li a {
     max-width: 100%;
     height: auto;
     padding: 1%;
-    width: 90px;
+    width: 80px;
 }
-
+.caixa-imagem{
+    text-align: center;
+    margin-top: 1%;
+}
+figure{
+    text-align: center;
+    display: inline-block;
+}
+figure img{
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    height: auto;
+}
+figure figcaption{
+    margin: 1.0em;
+    text-align: center;
+    color: black;
+}
 main{
     margin-top: 70px;
     padding: 20px;
@@ -101,7 +117,7 @@ main{
     align-items: center;
     justify-content: space-between;
     background-color: rgb(0, 0, 0);
-    padding: 0.5px 30px;
+    padding: 5px 30px;
     position: fixed;
     top: 0;
     width: 100%;
@@ -114,18 +130,17 @@ main{
     line-height: 3;
     font-weight: bold;
     color: rgb(255, 255, 255);
-   
+    font-family: "Quicksand", sans-serif;
 }
-
 .divgr{
     background-color: rgb(5, 5, 5);
     border-radius: 30px;
     position: relative;
-    top: 700px;
-    right: 120px;
+    top: 500px;
+    right: 80px;
     padding-left: 30px;
     padding-right: 30px;
-    width: 1450px;
+    width: 1140px;
 }
 
 .img1 img{
@@ -137,6 +152,34 @@ main{
     height: auto;
     padding: 20px;
 }
+
+.img2 img{
+    border-radius: 40px;
+    width: 600px;
+    display: block;
+    max-width: 100%;
+    height: auto;
+   padding-bottom: 20px;
+}
+.img3 img{
+    border-radius: 40px;
+    width: 600px;
+    max-width: 100%;
+    height: auto;
+    padding-bottom: 22px;
+    padding-top: 10px;
+
+}
+.img4 {
+    display: flex;
+    align-items: center;
+}
+
+.img4 img {
+    margin-left: 20px;
+    max-width: 30%;
+}
+
 .img7 img{
     border-radius: 30px;
     width: 900px;
@@ -163,9 +206,9 @@ main{
 }
 
 .divgr h2{
-    font-size: 1.5em;
+    font-size: 1.8em;
     text-align: calc(100);
-    font-family: "Quicksand", sans-serif;
+    padding-top: 80px;
 }
 
 table{
