--- a/css/estilo.css
+++ b/css/estilo.css
@@ -28,10 +28,11 @@ nav ul li a {
     text-decoration: none;
     padding: 10px 15px;
     display: flex;
+    font-size: 1.5em;
 }
 .menu-icon {
     display: none;
-    font-size: 10px;
+    font-size: 35px;
     color: rgb(255, 255, 255);
     cursor: pointer;
 }
@@ -113,6 +114,7 @@ main{
     font-weight: bold;
     color: rgb(255, 255, 255);
     font-family: "Quicksand", sans-serif;
+    font-size: 2em;
 }
 .divgr{
     background-color: rgb(5, 5, 5);
@@ -123,7 +125,9 @@ main{
     padding-left: 60px;
     padding-right: 60px;
     width: 109%;
+    font-size: 1.3em;
 }
+
 
 .img1 img{
     border-radius: 30px;
